# wigwam4-base

./: .cvsignore  autogen.sh
etc/: project-name  project-packages
src/wigwam-base-local/: .cvsignore  ChangeLog  Makefile.am  README  README.Wigwam3  TODO  VERSIONING  acwigwam.m4  autogen.sh  configure.in  shell-test  wigwam-config.h.in  ww-make.in
src/wigwam-base-local/archives/: Makefile.am  functions
src/wigwam-base-local/archives/BASE/: Makefile.am  get
src/wigwam-base-local/archives/local/: .cvsignore  Makefile.am  get
src/wigwam-base-local/doc/: .gitignore  Makefile.am  current-release-url.xml.in  environment.dia  packagectl.xml  wigwam-base.xml  wigwam-bootstrap-url.xml
src/wigwam-base-local/environment/: .gitignore  001-wigwam-base-profile  100-project.conf.pre  350-project.defaults  400-project.conf  Makefile.am  functions  print-interactive-environment  print-runtime-environment  print-setup-environment  print-unsetup-environment  wigwam-base.profile.in  ww-env-diffs.in
src/wigwam-base-local/environment/wigwam-env-api-tests/: Makefile.am  test_functions  ww_app_colon  ww_app_delim  ww_app_grep  ww_default  ww_env_api_reset  ww_has_componant  ww_int  ww_int_app_colon  ww_int_clear  ww_int_load_exports  ww_int_pre_colon  ww_int_set  ww_pre_colon  ww_pre_delim  ww_pre_grep  ww_set  ww_usage
src/wigwam-base-local/etc/: Makefile.am  package-archives  unsanitized
src/wigwam-base-local/functions/: .gitignore  Makefile.am  configurable-functions  debug-hook  sh-macros.in  wigwam-base-functions.in
src/wigwam-base-local/packagectl/: .cvsignore  Makefile.am  Version.pm  compute_installed_files.in  functions  image.in  invert_provides.in  merge_conflicts.in  merge_dependencies.in  merge_provides.in  merge_types.in  merge_versions.in  packagectl  plan.in  ref_files.in  show_conflicts.in  show_dependencies.in  show_provides.in  show_types.in  show_versions.in  sort_packages.in  test-version.in  unref_files.in
src/wigwam-base-local/packagectl/BASE/: Makefile.am  download  functions  install.mega  post-install  pre-install  reinstall  uninstall.mega  unpack  upgrade
src/wigwam-base-local/packagectl/make/: Makefile.am  build  install.mega
src/wigwam-base-local/src/: .gitignore  DB.pm.in  Makefile.am  test-ww-md5  test-ww-mkdir-p  test-ww-test-empty  test-ww-test-x  wigdo  ww-dump-db.in  ww-md5.c  ww-mkdir-p.c  ww-propeller.in  ww-rename.in  ww-test-empty.c  ww-test-x.c
src/wigwam-base-local/urls/: Makefile.am  ww-get-url
src/wigwam-base-local/urls/file/: Makefile.am  get
src/wigwam-base-local/urls/http/: .gitignore  Makefile.am  get  uwget.in
src/wigwam-base-local/ww-bootstrap/: .cvsignore  Makefile.am  autogen.sh.actual  bootstrap-args  bootstrap-checks  bootstrap-functions.in  bootstrap-head.in  bootstrap-tail  setup-env.actual  unsetup-env.actual
