TESTS =  \
    ww_int_load_exports \
    ww_has_componant    \
    ww_env_api_reset    \
    ww_pre_delim        \
    ww_app_delim        \
    ww_pre_grep         \
    ww_app_grep         \
    ww_int              \
    ww_int_clear        \
    ww_pre_colon        \
    ww_app_colon        \
    ww_int_set          \
    ww_int_app_colon    \
    ww_int_pre_colon    \
    ww_usage            \
    ww_set              \
    ww_default          

EXTRA_DIST=$(TESTS)
